web.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    branch: refs/heads/main
    commit: 7cf4b02f6dd3a781b25e1e9946aa2a22b0056061
    createdBy: tedleetc
    deployTimestamp: "1647422485307"
    deployment.kubernetes.io/revision: "7"
    jobName: build-and-publish-docker-image
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"web"},"name":"web","namespace":"ingress-demo"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"web"}},"strategy":{"rollingUpdate":{"maxSurge":1,"maxUnavailable":1},"type":"RollingUpdate"},"template":{"metadata":{"labels":{"app":"web"},"name":"web"},"spec":{"containers":[{"env":[{"name":"CONTENT_API_URL","value":"http://api:3001"}],"image":"fabmedical562999.azurecr.io/content-web","imagePullPoli [...]
    provider: GitHub
    repository: tedleetc/Fabmedical
    run: "1991804945"
    runUri: https://github.com/tedleetc/Fabmedical/actions/runs/1991804945
    workflow: content-web
  creationTimestamp: "2022-03-16T08:55:45Z"
  generation: 10
  labels:
    app: web
  name: web
  namespace: ingress-demo
  resourceVersion: "110474"
  uid: 248c4c54-4fc9-4241-87ae-12599893be42
spec:
  progressDeadlineSeconds: 600
  replicas: 4
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
      name: web
    spec:
      containers:
      - env:
        - name: CONTENT_API_URL
          value: http://api:3001
        image: fabmedical562999.azurecr.io/content-web
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 10
        name: web
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 125m
            memory: 128Mi
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: ingress-demo-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2022-03-16T09:38:47Z"
    lastUpdateTime: "2022-03-16T09:38:47Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2022-03-16T08:55:45Z"
    lastUpdateTime: "2022-03-16T09:39:17Z"
    message: ReplicaSet "web-fd8b6759f" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 10
  readyReplicas: 2
  replicas: 5
  unavailableReplicas: 3
  updatedReplicas: 2
